@@ -1814,6 +1814,14 @@ function host() {
 			$graphs_url      = $config['url_path'] . 'graphs.php?reset=1&host_id=' . $host['id'];
 			$data_source_url = $config['url_path'] . 'data_sources.php?reset=1&host_id=' . $host['id'];
 
+			if (empty($host['graphs'])) {
+				$host['graphs'] = 0;
+			}
+
+			if (empty($host['data_sources'])) {
+				$host['data_sources'] = 0;
+			}
+
 			form_alternate_row('line' . $host['id'], true);
 			form_selectable_cell(filter_value($host['description'], get_request_var('filter'), 'host.php?action=edit&id=' . $host['id']), $host['id']);
 			form_selectable_cell(filter_value($host['hostname'], get_request_var('filter')), $host['id']);
